# zigrun

./: .gitignore  Cargo.toml  FEATURES.md  README.md
evolve/: GOAL.md  OPERATOR_BOUNDARY.md  WAVES.md  autoloop.sh  evolve.sh  frontier_run.sh  gate_one.sh  impl-objective.template.md  integrate_ready.sh  land_one.sh  land_wave.py  run_loop.sh  spec_author.py  supervise.sh
oracle/: add.zig  arithmetic.zig  arrayidx.zig  arrays.zig  arraysum.zig  atmod.zig  bitops.zig  check.sh  comptime_block_s1.zig  comptime_type_s1.zig  diff.sh  ensure_zig.sh  enums.zig  error_union.zig  error_unions.zig  errorset_s1.zig  errorset_s2.zig  errorunion.zig  errorunion_s4.zig  fib.zig  fn.zig  forloop.zig  gate.sh  ifelse.zig  loopctl.zig  loops.zig  multidim_s1.zig  optional.zig  optional_s1.zig  optional_s2.zig  optional_s3.zig  packed_struct.zig  packedstruct_s1.zig  packedstruct_s5.zig  print.zig  print_args.zig  recursion.zig  signedints.zig  slice_s1.zig  slice_s5.zig  (+14 more)
oracle/err/: syntax.zig  undef_fn.zig  undef_var.zig
oracle/pending/: bitwise.zig  boollogic.zig  comptime.zig  comptime_array_s1.zig  comptime_struct_s1.zig  comptime_type_s2.zig  elseif.zig  enum.zig  errors.zig  errorset_s3.zig  errorset_s4.zig  errorset_s5.zig  errorunion_s1.zig  errorunion_s2.zig  errorunion_s3.zig  errorunion_s5.zig  for.zig  inttypes.zig  labeledloop.zig  multidim_arrays.zig  multidim_s2.zig  multidim_s3.zig  multidim_s4.zig  multidim_s5.zig  optional_s4.zig  optional_s5.zig  optionals.zig  packedstruct_s2.zig  slice_s2.zig  (+16 more)
src/: ast.rs  codegen.rs  interp.rs  lexer.rs  main.rs  parser.rs
